Created page with "Existují dva režimy pokračování: '''Režim pokračování při vytváření geometrie"''' a '''Režim pokračování při vytváření vazeb"'''. Pokud jsou tyto možnosti zaškrtnuty (výchozí nastavení) v [[Sketcher_Preferences#Display|předvolbách]], související nástroje se po dokončení restartují. Pro opuštění kontinuálního nástroje stiskněte klávesu {{KEY|Esc}} nebo pravé tlačítko myši. Toto je nutné opakovat, pokud již byl zadán nástro..."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -265,10 +265,8 @@
 </p><p><span id="Continue_modes"></span>
 </p>
 <h3><span id="Re.C5.BEimy_pokra.C4.8Dov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Re&#382;imy_pokra&#269;ov&aacute;n&iacute;">Re&#382;imy pokra&#269;ov&aacute;n&iacute;</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>There are two continue modes: <b>Geometry creation "Continue Mode"</b> and <b>Constraint creation "Continue Mode"</b>. If these are checked (default) in the <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">preferences</a>, related tools will restart after finishing. To exit a continuous tool press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> or the right mouse button. This must be repeated if a continuous geometry tool has already received input. You can also exit a continuous tool by starting another geometry or constraint creation tool. Note that pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> if no tool is active will exit sketch edit mode. Uncheck the <b>Esc key can leave sketch edit mode</b> <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">preference</a> if you often inadvertently press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> too many times.
+<p>Existuj&iacute; dva re&#382;imy pokra&#269;ov&aacute;n&iacute;: <b>Re&#382;im pokra&#269;ov&aacute;n&iacute; p&#345;i vytv&aacute;&#345;en&iacute; geometrie"</b> a <b>Re&#382;im pokra&#269;ov&aacute;n&iacute; p&#345;i vytv&aacute;&#345;en&iacute; vazeb"</b>. Pokud jsou tyto mo&#382;nosti za&scaron;krtnuty (v&yacute;choz&iacute; nastaven&iacute;) v <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">p&#345;edvolb&aacute;ch</a>, souvisej&iacute;c&iacute; n&aacute;stroje se po dokon&#269;en&iacute; restartuj&iacute;. Pro opu&scaron;t&#283;n&iacute; kontinu&aacute;ln&iacute;ho n&aacute;stroje stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> nebo prav&eacute; tla&#269;&iacute;tko my&scaron;i. Toto je nutn&eacute; opakovat, pokud ji&#382; byl zad&aacute;n n&aacute;stroj s kontinu&aacute;ln&iacute; geometri&iacute;. Kontinu&aacute;ln&iacute; n&aacute;stroj m&#367;&#382;ete tak&eacute; ukon&#269;it spu&scaron;t&#283;n&iacute;m jin&eacute;ho n&aacute;stroje pro vytv&aacute;&#345;en&iacute; geometrie nebo vazby. V&scaron;imn&#283;te si, &#382;e stisknut&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, pokud nen&iacute; aktivn&iacute; &#382;&aacute;dn&yacute; n&aacute;stroj, opust&iacute;te re&#382;im &uacute;pravy n&aacute;&#269;rtu. Pokud &#269;asto necht&#283;n&#283; stisknete kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, zru&scaron;te v <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">p&#345;edvolb&aacute;chza</a>&scaron;krtnut&iacute; pol&iacute;&#269;ka <b>Kl&aacute;vesa Esc m&#367;&#382;e opustit re&#382;im &uacute;prav n&aacute;&#269;rtu</b>.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Auto_constraints">Auto constraints</span></h3>
 </div>
@@ -537,13 +535,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118141401
+Cached time: 20260118142254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.494 seconds
-Real time usage: 0.688 seconds
-Preprocessor visited node count: 1421/1000000
+CPU time usage: 0.405 seconds
+Real time usage: 0.938 seconds
+Preprocessor visited node count: 1420/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -553,19 +551,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.927      1 -total
- 31.16%   16.493      1 Template:Sketcher_Tools_navi/cs
- 18.98%   10.045      2 Template:Navigation_menu_2
- 11.94%    6.317      1 Template:Userdocnavi/cs
- 10.93%    5.784      1 Template:PropertyView
-  6.60%    3.492     34 Template:Version
-  5.96%    3.156      1 Template:Variable
-  5.92%    3.134      2 Template:Docnav
-  5.19%    2.747      6 Template:Caption
-  4.82%    2.549     14 Template:KEY
+100.00%   67.337      1 -total
+ 20.32%   13.680      1 Template:Sketcher_Tools_navi/cs
+ 17.94%   12.077      1 Template:PropertyView
+ 15.07%   10.149      2 Template:Navigation_menu_2
+ 12.49%    8.413     14 Template:KEY
+ 10.26%    6.911      1 Template:Userdocnavi/cs
+  8.97%    6.038      8 Template:VersionPlus
+  5.93%    3.991     34 Template:Version
+  4.72%    3.181      6 Template:Caption
+  3.98%    2.680      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118141400 and revision id 1740617. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118142253 and revision id 1740619. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
