--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -270,10 +270,8 @@
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Auto_constraints">Auto constraints</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>In sketches that have <b>Auto constraints</b> checked (default) several constraints are applied automatically. The icon of a proposed automatic constraint is shown next to the cursor when it is placed correctly. Left-clicking will then apply that constraint. This is a per-sketch setting that can be changed in the <a href="../Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Sketcher Dialog</a> or by changing the <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Autoconstraints</b> <a href="../Property_View.html" title="Property View">property</a> of the sketch.
+<p>Ve skic&aacute;ch, u kter&yacute;ch je za&scaron;krtnuto pol&iacute;&#269;ko <b>Automatick&eacute; vazby</b> (v&yacute;choz&iacute; nastaven&iacute;), se automaticky pou&#382;ije n&#283;kolik vazeb. Ikona navrhovan&eacute;ho automatick&eacute; vazby se zobraz&iacute; vedle kurzoru, pokud je spr&aacute;vn&#283; um&iacute;st&#283;n. Kliknut&iacute;m lev&yacute;m tla&#269;&iacute;tkem my&scaron;i se pak tato vazba pou&#382;ije. Jedn&aacute; se o nastaven&iacute; pro jednotliv&eacute; skici, kter&eacute; lze zm&#283;nit v <a href="../Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">dialogov&eacute;m okn&#283; Sketcher</a> nebo zm&#283;nou vlastnosti <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Autoconstraints</b> <a href="../Property_View.html" title="Property View">property</a> skici.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The following constraints are applied automatically:
 </p>
@@ -535,13 +533,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118142308
+Cached time: 20260118142854
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.391 seconds
-Real time usage: 0.505 seconds
-Preprocessor visited node count: 1420/1000000
+CPU time usage: 0.445 seconds
+Real time usage: 0.814 seconds
+Preprocessor visited node count: 1419/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -551,19 +549,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.023      1 -total
- 22.30%    8.703      1 Template:Sketcher_Tools_navi/cs
- 13.42%    5.238      2 Template:Navigation_menu_2
- 12.66%    4.941      1 Template:PropertyView
- 10.38%    4.050      1 Template:Userdocnavi/cs
-  8.39%    3.275      2 Template:Docnav
-  7.52%    2.935     34 Template:Version
-  6.53%    2.549      1 Template:Variable
-  5.59%    2.183      8 Template:VersionPlus
-  5.49%    2.143     14 Template:KEY
+100.00%   45.641      1 -total
+ 21.62%    9.869      1 Template:Sketcher_Tools_navi/cs
+ 17.63%    8.047      2 Template:Navigation_menu_2
+ 15.51%    7.077      1 Template:Userdocnavi/cs
+  8.85%    4.039      1 Template:PropertyView
+  7.98%    3.640     34 Template:Version
+  7.08%    3.230      6 Template:Caption
+  6.18%    2.822      2 Template:Docnav
+  4.75%    2.168      1 Template:Variable
+  4.70%    2.146      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118142307 and revision id 1740621. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118142852 and revision id 1740623. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
