--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -266,10 +266,9 @@
 </p>
 <h3><span id="Re.C5.BEimy_pokra.C4.8Dov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Re&#382;imy_pokra&#269;ov&aacute;n&iacute;">Re&#382;imy pokra&#269;ov&aacute;n&iacute;</span></h3>
 <p>Existuj&iacute; dva re&#382;imy pokra&#269;ov&aacute;n&iacute;: <b>Re&#382;im pokra&#269;ov&aacute;n&iacute; p&#345;i vytv&aacute;&#345;en&iacute; geometrie"</b> a <b>Re&#382;im pokra&#269;ov&aacute;n&iacute; p&#345;i vytv&aacute;&#345;en&iacute; vazeb"</b>. Pokud jsou tyto mo&#382;nosti za&scaron;krtnuty (v&yacute;choz&iacute; nastaven&iacute;) v <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">p&#345;edvolb&aacute;ch</a>, souvisej&iacute;c&iacute; n&aacute;stroje se po dokon&#269;en&iacute; restartuj&iacute;. Pro opu&scaron;t&#283;n&iacute; kontinu&aacute;ln&iacute;ho n&aacute;stroje stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> nebo prav&eacute; tla&#269;&iacute;tko my&scaron;i. Toto je nutn&eacute; opakovat, pokud ji&#382; byl zad&aacute;n n&aacute;stroj s kontinu&aacute;ln&iacute; geometri&iacute;. Kontinu&aacute;ln&iacute; n&aacute;stroj m&#367;&#382;ete tak&eacute; ukon&#269;it spu&scaron;t&#283;n&iacute;m jin&eacute;ho n&aacute;stroje pro vytv&aacute;&#345;en&iacute; geometrie nebo vazby. V&scaron;imn&#283;te si, &#382;e stisknut&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, pokud nen&iacute; aktivn&iacute; &#382;&aacute;dn&yacute; n&aacute;stroj, opust&iacute;te re&#382;im &uacute;pravy n&aacute;&#269;rtu. Pokud &#269;asto necht&#283;n&#283; stisknete kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, zru&scaron;te v <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">p&#345;edvolb&aacute;ch</a> za&scaron;krtnut&iacute; pol&iacute;&#269;ka <b>Kl&aacute;vesa Esc m&#367;&#382;e opustit re&#382;im &uacute;prav n&aacute;&#269;rtu</b>.
+</p><p><span id="Auto_constraints"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Auto_constraints">Auto constraints</span></h3>
-</div>
+<h3><span id="Automatick.C3.A9_vazby"></span><span class="mw-headline" id="Automatick&eacute;_vazby">Automatick&eacute; vazby</span></h3>
 <p>Ve skic&aacute;ch, u kter&yacute;ch je za&scaron;krtnuto pol&iacute;&#269;ko <b>Automatick&eacute; vazby</b> (v&yacute;choz&iacute; nastaven&iacute;), se automaticky pou&#382;ije n&#283;kolik vazeb. Ikona navrhovan&eacute;ho automatick&eacute; vazby se zobraz&iacute; vedle kurzoru, pokud je spr&aacute;vn&#283; um&iacute;st&#283;n. Kliknut&iacute;m lev&yacute;m tla&#269;&iacute;tkem my&scaron;i se pak tato vazba pou&#382;ije. Jedn&aacute; se o nastaven&iacute; pro jednotliv&eacute; skici, kter&eacute; lze zm&#283;nit v <a href="../Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">dialogov&eacute;m okn&#283; Sketcher</a> nebo zm&#283;nou vlastnosti <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Autoconstraints</b> <a href="../Property_View.html" title="Property View">property</a> skici.
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -533,12 +532,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118142854
+Cached time: 20260118142914
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.445 seconds
-Real time usage: 0.814 seconds
+CPU time usage: 0.429 seconds
+Real time usage: 0.602 seconds
 Preprocessor visited node count: 1419/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -549,19 +548,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.641      1 -total
- 21.62%    9.869      1 Template:Sketcher_Tools_navi/cs
- 17.63%    8.047      2 Template:Navigation_menu_2
- 15.51%    7.077      1 Template:Userdocnavi/cs
-  8.85%    4.039      1 Template:PropertyView
-  7.98%    3.640     34 Template:Version
-  7.08%    3.230      6 Template:Caption
-  6.18%    2.822      2 Template:Docnav
-  4.75%    2.168      1 Template:Variable
-  4.70%    2.146      1 Template:TOCright
+100.00%   43.857      1 -total
+ 24.08%   10.561      1 Template:Sketcher_Tools_navi/cs
+ 12.23%    5.362      2 Template:Navigation_menu_2
+ 11.93%    5.234     34 Template:Version
+ 11.63%    5.100      1 Template:Userdocnavi/cs
+  8.07%    3.540      1 Template:PropertyView
+  7.33%    3.216      2 Template:Docnav
+  6.30%    2.762     14 Template:KEY
+  6.04%    2.651      1 Template:TOCright
+  4.50%    1.974      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118142852 and revision id 1740623. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118142913 and revision id 1740625. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
