--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -270,17 +270,14 @@
 </p>
 <h3><span id="Automatick.C3.A9_vazby"></span><span class="mw-headline" id="Automatick&eacute;_vazby">Automatick&eacute; vazby</span></h3>
 <p>Ve skic&aacute;ch, u kter&yacute;ch je za&scaron;krtnuto pol&iacute;&#269;ko <b>Automatick&eacute; vazby</b> (v&yacute;choz&iacute; nastaven&iacute;), se automaticky pou&#382;ije n&#283;kolik vazeb. Ikona navrhovan&eacute;ho automatick&eacute; vazby se zobraz&iacute; vedle kurzoru, pokud je spr&aacute;vn&#283; um&iacute;st&#283;n. Kliknut&iacute;m lev&yacute;m tla&#269;&iacute;tkem my&scaron;i se pak tato vazba pou&#382;ije. Jedn&aacute; se o nastaven&iacute; pro jednotliv&eacute; skici, kter&eacute; lze zm&#283;nit v <a href="../Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">dialogov&eacute;m okn&#283; Sketcher</a> nebo zm&#283;nou vlastnosti <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Autoconstraints</b> <a href="../Property_View.html" title="Property View">property</a> skici.
+</p><p>Automaticky se uplat&#328;uj&iacute; n&aacute;sleduj&iacute;c&iacute; vazby:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The following constraints are applied automatically:
-</p>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincident.svg&amp;filetimestamp=20240101173005&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Coincident</a></li>
-<li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPointOnObject.svg&amp;filetimestamp=20240101173043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Point-on-object</a></li>
-<li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorizontal.svg&amp;filetimestamp=20240101173125&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizontal</a></li>
-<li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainVertical.svg&amp;filetimestamp=20240101173106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertical</a></li>
-<li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainTangent.svg&amp;filetimestamp=20240101173249&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainTangent.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Tangent</a></li>
-<li><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Symmetric</a> (line midpoint)</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincident.svg&amp;filetimestamp=20240101173005&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Shoda</a></li>
+<li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPointOnObject.svg&amp;filetimestamp=20240101173043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Bod na objektu</a></li>
+<li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorizontal.svg&amp;filetimestamp=20240101173125&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizont&aacute;ln&iacute;</a></li>
+<li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainVertical.svg&amp;filetimestamp=20240101173106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute;</a></li>
+<li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainTangent.svg&amp;filetimestamp=20240101173249&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainTangent.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Te&#269;na</a></li>
+<li><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Symmetrie</a> (st&#345;ed linie)</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Snapping">Snapping</span></h3>
 </div>
@@ -532,13 +529,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118142914
+Cached time: 20260118143246
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.429 seconds
-Real time usage: 0.602 seconds
-Preprocessor visited node count: 1419/1000000
+CPU time usage: 0.445 seconds
+Real time usage: 0.792 seconds
+Preprocessor visited node count: 1418/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -548,19 +545,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.857      1 -total
- 24.08%   10.561      1 Template:Sketcher_Tools_navi/cs
- 12.23%    5.362      2 Template:Navigation_menu_2
- 11.93%    5.234     34 Template:Version
- 11.63%    5.100      1 Template:Userdocnavi/cs
-  8.07%    3.540      1 Template:PropertyView
-  7.33%    3.216      2 Template:Docnav
-  6.30%    2.762     14 Template:KEY
-  6.04%    2.651      1 Template:TOCright
-  4.50%    1.974      1 Template:Variable
+100.00%   35.146      1 -total
+ 19.54%    6.866      1 Template:Sketcher_Tools_navi/cs
+ 12.68%    4.456      2 Template:Navigation_menu_2
+ 12.29%    4.319      1 Template:Userdocnavi/cs
+ 10.37%    3.643      1 Template:PropertyView
+ 10.21%    3.590      2 Template:Docnav
+  8.22%    2.889     34 Template:Version
+  7.81%    2.745      1 Template:TOCright
+  6.45%    2.267      6 Template:Caption
+  5.26%    1.847      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118142913 and revision id 1740625. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143245 and revision id 1740627. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
