--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -278,9 +278,9 @@
 <li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainVertical.svg&amp;filetimestamp=20240101173106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute;</a></li>
 <li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainTangent.svg&amp;filetimestamp=20240101173249&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainTangent.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Te&#269;na</a></li>
 <li><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Symmetrie</a> (st&#345;ed linie)</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Snapping">Snapping</span></h3>
-</div>
+<p><span id="Snapping"></span>
+</p>
+<h3><span id="P.C5.99ichyt.C3.A1v.C3.A1n.C3.AD"></span><span class="mw-headline" id="P&#345;ichyt&aacute;v&aacute;n&iacute;">P&#345;ichyt&aacute;v&aacute;n&iacute;</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
 </p>
@@ -529,12 +529,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118143246
+Cached time: 20260118143404
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.445 seconds
-Real time usage: 0.792 seconds
+CPU time usage: 0.471 seconds
+Real time usage: 1.010 seconds
 Preprocessor visited node count: 1418/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -545,19 +545,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.146      1 -total
- 19.54%    6.866      1 Template:Sketcher_Tools_navi/cs
- 12.68%    4.456      2 Template:Navigation_menu_2
- 12.29%    4.319      1 Template:Userdocnavi/cs
- 10.37%    3.643      1 Template:PropertyView
- 10.21%    3.590      2 Template:Docnav
-  8.22%    2.889     34 Template:Version
-  7.81%    2.745      1 Template:TOCright
-  6.45%    2.267      6 Template:Caption
-  5.26%    1.847      1 Template:Variable
+100.00%   64.095      1 -total
+ 18.15%   11.632      1 Template:Sketcher_Tools_navi/cs
+ 11.67%    7.481     34 Template:Version
+ 11.66%    7.475      1 Template:Userdocnavi/cs
+ 10.73%    6.878      1 Template:PropertyView
+ 10.07%    6.455      2 Template:Navigation_menu_2
+  9.60%    6.152      2 Template:Docnav
+  6.03%    3.862      1 Template:Variable
+  5.98%    3.830      5 Template:MenuCommand
+  5.81%    3.723      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143245 and revision id 1740627. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143403 and revision id 1740629. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
