--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -281,10 +281,8 @@
 <p><span id="Snapping"></span>
 </p>
 <h3><span id="P.C5.99ichyt.C3.A1v.C3.A1n.C3.AD"></span><span class="mw-headline" id="P&#345;ichyt&aacute;v&aacute;n&iacute;">P&#345;ichyt&aacute;v&aacute;n&iacute;</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <p><span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>It is possible to <a href="../Sketcher_Grid.html" title="Sketcher Grid">snap to grid lines and grid intersection</a>, and to <a href="../Sketcher_Snap.html" title="Sketcher Snap">snap to edges of geometry and midpoints of lines and arcs, and to certain angles</a>. Please note that snapping does not produce constraints in and of itself. For example, only if <a href="#Auto_constraints">Auto constraints</a> is switched on will snapping to an edge produce a <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">point-on-object constraint</a>. But just picking a point on the edge would then have the same result.
 </p>
@@ -529,13 +527,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118143404
+Cached time: 20260118143417
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.471 seconds
-Real time usage: 1.010 seconds
-Preprocessor visited node count: 1418/1000000
+CPU time usage: 0.508 seconds
+Real time usage: 1.960 seconds
+Preprocessor visited node count: 1417/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -545,19 +543,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.095      1 -total
- 18.15%   11.632      1 Template:Sketcher_Tools_navi/cs
- 11.67%    7.481     34 Template:Version
- 11.66%    7.475      1 Template:Userdocnavi/cs
- 10.73%    6.878      1 Template:PropertyView
- 10.07%    6.455      2 Template:Navigation_menu_2
-  9.60%    6.152      2 Template:Docnav
-  6.03%    3.862      1 Template:Variable
-  5.98%    3.830      5 Template:MenuCommand
-  5.81%    3.723      6 Template:Caption
+100.00%  241.935      1 -total
+ 20.99%   50.771      1 Template:Sketcher_Tools_navi/cs
+ 14.11%   34.130      2 Template:Navigation_menu_2
+ 13.13%   31.761      8 Template:VersionPlus
+ 12.33%   29.819      1 Template:PropertyView
+ 10.09%   24.421      1 Template:Userdocnavi/cs
+  9.30%   22.511      2 Template:Docnav
+  8.37%   20.260     14 Template:KEY
+  5.42%   13.113      6 Template:Caption
+  4.66%   11.277      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143403 and revision id 1740629. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143415 and revision id 1740631. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
