Created page with "=== Parametry zobrazení ==="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -283,14 +283,11 @@
 <h3><span id="P.C5.99ichyt.C3.A1v.C3.A1n.C3.AD"></span><span class="mw-headline" id="P&#345;ichyt&aacute;v&aacute;n&iacute;">P&#345;ichyt&aacute;v&aacute;n&iacute;</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>
 </p><p>Je mo&#382;n&eacute; <a href="../Sketcher_Grid.html" title="Sketcher Grid">p&#345;ichytit se k lini&iacute;m a pr&#367;se&#269;&iacute;k&#367;m m&#345;&iacute;&#382;ky</a> a <a href="../Sketcher_Snap.html" title="Sketcher Snap">p&#345;ichytit se k hran&aacute;m geometrie a st&#345;ed&#367;m lini&iacute; a oblouk&#367; a k ur&#269;it&yacute;m &uacute;hl&#367;m</a>. Upozor&#328;ujeme, &#382;e p&#345;ichycen&iacute; samo o sob&#283; nevytv&aacute;&#345;&iacute; vazby. Nap&#345;&iacute;klad pouze pokud je zapnuta funkce <a href="#Auto_constraints">Automatick&eacute; omezen&iacute;</a>, vytvo&#345;&iacute; p&#345;ichycen&iacute; k hran&#283; omezen&iacute; <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">bod na objektu</a>. Ale pouh&eacute; vybr&aacute;n&iacute; bodu na okraji by pak m&#283;lo stejn&yacute; v&yacute;sledek.
+</p><p><span id="On-View-Parameters"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="On-View-Parameters">On-View-Parameters</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<h3><span id="Parametry_zobrazen.C3.AD"></span><span class="mw-headline" id="Parametry_zobrazen&iacute;">Parametry zobrazen&iacute;</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Depending on the selected option in the <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">preferences</a> only the dimensional On-View-Parameters or both the dimensional and the positional On-View-Parameters can be enabled. Positional parameters allow the input of exact coordinates, for example the center of a circle, or the start point of a line. Dimensional parameters allow the input of exact dimensions, for example the radius of a circle, or the length and angle of a line. On-View-Parameters are not available for all tools.
 </p>
@@ -524,13 +521,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118143723
+Cached time: 20260118143808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.419 seconds
-Real time usage: 0.678 seconds
-Preprocessor visited node count: 1416/1000000
+CPU time usage: 0.399 seconds
+Real time usage: 0.919 seconds
+Preprocessor visited node count: 1415/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -540,19 +537,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.936      1 -total
- 19.93%   10.747      1 Template:Sketcher_Tools_navi/cs
- 12.90%    6.957      2 Template:Navigation_menu_2
- 12.38%    6.677     34 Template:Version
- 12.03%    6.490      1 Template:Userdocnavi/cs
- 11.61%    6.263      1 Template:PropertyView
-  7.71%    4.158      5 Template:MenuCommand
-  6.83%    3.682      8 Template:VersionPlus
-  6.23%    3.360      2 Template:Docnav
-  4.65%    2.506      1 Template:Variable
+100.00%   80.740      1 -total
+ 23.05%   18.610     14 Template:KEY
+ 14.90%   12.032      6 Template:Caption
+ 14.57%   11.767      1 Template:Sketcher_Tools_navi/cs
+ 13.63%   11.001      1 Template:Userdocnavi/cs
+  9.51%    7.677      2 Template:Navigation_menu_2
+  8.58%    6.928      5 Template:MenuCommand
+  4.51%    3.639      1 Template:TOCright
+  3.59%    2.895      8 Template:VersionPlus
+  3.53%    2.852     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143722 and revision id 1740633. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143808 and revision id 1740637. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
