Created page with "{{Version|1.0}}"

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -521,12 +521,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118143808
+Cached time: 20260118143807
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.399 seconds
-Real time usage: 0.919 seconds
+CPU time usage: 0.394 seconds
+Real time usage: 1.323 seconds
 Preprocessor visited node count: 1415/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -537,19 +537,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.740      1 -total
- 23.05%   18.610     14 Template:KEY
- 14.90%   12.032      6 Template:Caption
- 14.57%   11.767      1 Template:Sketcher_Tools_navi/cs
- 13.63%   11.001      1 Template:Userdocnavi/cs
-  9.51%    7.677      2 Template:Navigation_menu_2
-  8.58%    6.928      5 Template:MenuCommand
-  4.51%    3.639      1 Template:TOCright
-  3.59%    2.895      8 Template:VersionPlus
-  3.53%    2.852     34 Template:Version
+100.00%  100.634      1 -total
+ 31.73%   31.935      1 Template:Userdocnavi/cs
+ 28.69%   28.869      1 Template:Sketcher_Tools_navi/cs
+  9.91%    9.976      2 Template:Navigation_menu_2
+  8.62%    8.679      8 Template:VersionPlus
+  5.93%    5.966     34 Template:Version
+  5.02%    5.052      1 Template:PropertyView
+  4.73%    4.764     14 Template:KEY
+  2.72%    2.737      2 Template:Docnav
+  2.59%    2.609      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143808 and revision id 1740637. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143806 and revision id 1740637. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
