--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -287,12 +287,8 @@
 </p>
 <h3><span id="Parametry_zobrazen.C3.AD"></span><span class="mw-headline" id="Parametry_zobrazen&iacute;">Parametry zobrazen&iacute;</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Depending on the selected option in the <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">preferences</a> only the dimensional On-View-Parameters or both the dimensional and the positional On-View-Parameters can be enabled. Positional parameters allow the input of exact coordinates, for example the center of a circle, or the start point of a line. Dimensional parameters allow the input of exact dimensions, for example the radius of a circle, or the length and angle of a line. On-View-Parameters are not available for all tools.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_On_view_parameters_positional.png&amp;filetimestamp=20240203203414&amp;.html" class="mw-file-description"><img src="../File/Sketcher_On_view_parameters_positional.png" decoding="async" width="300" height="250" class="mw-file-element" data-file-width="300" data-file-height="250"></a></span>
+</p><p>V z&aacute;vislosti na vybran&eacute; mo&#382;nosti v <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">preferenc&iacute;ch</a> lze povolit pouze rozm&#283;rov&eacute; parametry zobrazen&iacute; nebo rozm&#283;rov&eacute; i pozi&#269;n&iacute; parametry zobrazen&iacute;. Pozi&#269;n&iacute; parametry umo&#382;&#328;uj&iacute; zad&aacute;n&iacute; p&#345;esn&yacute;ch sou&#345;adnic, nap&#345;&iacute;klad st&#345;edu kruhu nebo po&#269;&aacute;te&#269;n&iacute;ho bodu p&#345;&iacute;mky. Rozm&#283;rov&eacute; parametry umo&#382;&#328;uj&iacute; zad&aacute;n&iacute; p&#345;esn&yacute;ch rozm&#283;r&#367;, nap&#345;&iacute;klad polom&#283;ru kruhu nebo d&eacute;lky a &uacute;hlu p&#345;&iacute;mky. Parametry zobrazen&eacute; na obrazovce nejsou k dispozici pro v&scaron;echny n&aacute;stroje.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_On_view_parameters_positional.png&amp;filetimestamp=20240203203414&amp;.html" class="mw-file-description"><img src="../File/Sketcher_On_view_parameters_positional.png" decoding="async" width="300" height="250" class="mw-file-element" data-file-width="300" data-file-height="250"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Determining the center point of a circle with the positional parameters enabled</p>
@@ -521,13 +517,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118143807
+Cached time: 20260118144114
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.394 seconds
-Real time usage: 1.323 seconds
-Preprocessor visited node count: 1415/1000000
+CPU time usage: 0.499 seconds
+Real time usage: 1.760 seconds
+Preprocessor visited node count: 1414/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -537,19 +533,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  100.634      1 -total
- 31.73%   31.935      1 Template:Userdocnavi/cs
- 28.69%   28.869      1 Template:Sketcher_Tools_navi/cs
-  9.91%    9.976      2 Template:Navigation_menu_2
-  8.62%    8.679      8 Template:VersionPlus
-  5.93%    5.966     34 Template:Version
-  5.02%    5.052      1 Template:PropertyView
-  4.73%    4.764     14 Template:KEY
-  2.72%    2.737      2 Template:Docnav
-  2.59%    2.609      1 Template:Variable
+100.00%  113.952      1 -total
+ 31.18%   35.530      1 Template:Userdocnavi/cs
+ 13.49%   15.375      1 Template:Sketcher_Tools_navi/cs
+  9.35%   10.660     34 Template:Version
+  7.67%    8.736      2 Template:Navigation_menu_2
+  7.33%    8.353      1 Template:PropertyView
+  5.82%    6.634      1 Template:TOCright
+  5.79%    6.599      6 Template:Caption
+  5.32%    6.065      2 Template:Docnav
+  4.52%    5.153      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118143806 and revision id 1740637. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118144112 and revision id 1740639. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
