Created page with "{{Caption|Určení středového bodu kruhu s povolenými pozičními parametry}}"

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -290,9 +290,7 @@
 </p><p>V z&aacute;vislosti na vybran&eacute; mo&#382;nosti v <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">preferenc&iacute;ch</a> lze povolit pouze rozm&#283;rov&eacute; parametry zobrazen&iacute; nebo rozm&#283;rov&eacute; i pozi&#269;n&iacute; parametry zobrazen&iacute;. Pozi&#269;n&iacute; parametry umo&#382;&#328;uj&iacute; zad&aacute;n&iacute; p&#345;esn&yacute;ch sou&#345;adnic, nap&#345;&iacute;klad st&#345;edu kruhu nebo po&#269;&aacute;te&#269;n&iacute;ho bodu p&#345;&iacute;mky. Rozm&#283;rov&eacute; parametry umo&#382;&#328;uj&iacute; zad&aacute;n&iacute; p&#345;esn&yacute;ch rozm&#283;r&#367;, nap&#345;&iacute;klad polom&#283;ru kruhu nebo d&eacute;lky a &uacute;hlu p&#345;&iacute;mky. Parametry zobrazen&eacute; na obrazovce nejsou k dispozici pro v&scaron;echny n&aacute;stroje.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_On_view_parameters_positional.png&amp;filetimestamp=20240203203414&amp;.html" class="mw-file-description"><img src="../File/Sketcher_On_view_parameters_positional.png" decoding="async" width="300" height="250" class="mw-file-element" data-file-width="300" data-file-height="250"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Determining the center point of a circle with the positional parameters enabled</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Ur&#269;en&iacute; st&#345;edov&eacute;ho bodu kruhu s povolen&yacute;mi pozi&#269;n&iacute;mi parametry</p>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_On_view_parameters_dimensional.png&amp;filetimestamp=20240203203400&amp;.html" class="mw-file-description"><img src="../File/Sketcher_On_view_parameters_dimensional.png" decoding="async" width="300" height="250" class="mw-file-element" data-file-width="300" data-file-height="250"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -517,15 +515,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118144114
+Cached time: 20260118144215
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.499 seconds
-Real time usage: 1.760 seconds
-Preprocessor visited node count: 1414/1000000
-Post&#8208;expand include size: 35004/2097152 bytes
-Template argument size: 9800/2097152 bytes
+CPU time usage: 0.426 seconds
+Real time usage: 0.517 seconds
+Preprocessor visited node count: 1413/1000000
+Post&#8208;expand include size: 34982/2097152 bytes
+Template argument size: 9789/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -533,19 +531,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  113.952      1 -total
- 31.18%   35.530      1 Template:Userdocnavi/cs
- 13.49%   15.375      1 Template:Sketcher_Tools_navi/cs
-  9.35%   10.660     34 Template:Version
-  7.67%    8.736      2 Template:Navigation_menu_2
-  7.33%    8.353      1 Template:PropertyView
-  5.82%    6.634      1 Template:TOCright
-  5.79%    6.599      6 Template:Caption
-  5.32%    6.065      2 Template:Docnav
-  4.52%    5.153      8 Template:VersionPlus
+100.00%   44.317      1 -total
+ 27.80%   12.321      1 Template:Sketcher_Tools_navi/cs
+ 14.84%    6.577      2 Template:Navigation_menu_2
+ 14.06%    6.233      1 Template:Userdocnavi/cs
+  9.03%    4.001      1 Template:PropertyView
+  6.52%    2.889     34 Template:Version
+  6.15%    2.727      8 Template:VersionPlus
+  5.50%    2.438      2 Template:Docnav
+  5.39%    2.389     14 Template:KEY
+  4.73%    2.096      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118144112 and revision id 1740639. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118144214 and revision id 1740641. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
