Created page with "=== Výběr rámečkem ve 3D pohledu ==="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -310,10 +310,9 @@
 </p>
 <h3><span id="V.C3.BDb.C4.9Br_prvk.C5.AF_ve_3D_zobrazen.C3.AD"></span><span class="mw-headline" id="V&yacute;b&#283;r_prvk&#367;_ve_3D_zobrazen&iacute;">V&yacute;b&#283;r prvk&#367; ve 3D zobrazen&iacute;</span></h3>
 <p>Stejn&#283; jako jinde ve FreeCADu lze prvek ve <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a> vybrat jedin&yacute;m kliknut&iacute;m lev&yacute;m tla&#269;&iacute;tkem my&scaron;i. P&#345;i v&yacute;b&#283;ru v&iacute;ce prvk&#367; v&scaron;ak nen&iacute; nutn&eacute; dr&#382;et stisknutou kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>. Podr&#382;en&iacute; t&eacute;to kl&aacute;vesy je v&scaron;ak mo&#382;n&eacute; a m&aacute; tu v&yacute;hodu, &#382;e m&#367;&#382;ete kliknout mimo, ani&#382; byste ztratili v&yacute;b&#283;r. T&iacute;mto zp&#367;sobem lze vybrat hrany, body a vazby.
+</p><p><span id="3D_View_box_selection"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="3D_View_box_selection">3D View box selection</span></h3>
-</div>
+<h3><span id="V.C3.BDb.C4.9Br_r.C3.A1me.C4.8Dkem_ve_3D_pohledu"></span><span class="mw-headline" id="V&yacute;b&#283;r_r&aacute;me&#269;kem_ve_3D_pohledu">V&yacute;b&#283;r r&aacute;me&#269;kem ve 3D pohledu</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Box selection in the 3D View works without using <a href="../Std_BoxSelection.html" title="Std BoxSelection">Std BoxSelection</a> or <a href="../Std_BoxElementSelection.html" title="Std BoxElementSelection">Std BoxElementSelection</a>:
 </p>
@@ -500,12 +499,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118145935
+Cached time: 20260118150051
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.451 seconds
-Real time usage: 0.665 seconds
+CPU time usage: 0.470 seconds
+Real time usage: 0.901 seconds
 Preprocessor visited node count: 1407/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
@@ -516,19 +515,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.053      1 -total
- 21.34%   10.894      1 Template:Sketcher_Tools_navi/cs
- 13.41%    6.844      1 Template:PropertyView
- 12.14%    6.198      2 Template:Navigation_menu_2
-  9.29%    4.741      1 Template:Userdocnavi/cs
-  7.58%    3.871      2 Template:Docnav
-  7.21%    3.679     34 Template:Version
-  6.36%    3.249      1 Template:Variable
-  6.23%    3.179      6 Template:Caption
-  5.57%    2.843      8 Template:VersionPlus
+100.00%   49.406      1 -total
+ 19.19%    9.480      2 Template:Docnav
+ 16.65%    8.226      1 Template:Sketcher_Tools_navi/cs
+ 15.97%    7.891      6 Template:Caption
+ 11.27%    5.566      2 Template:Navigation_menu_2
+  9.57%    4.730      1 Template:Userdocnavi/cs
+  6.89%    3.404      1 Template:PropertyView
+  5.98%    2.957     34 Template:Version
+  4.12%    2.037      5 Template:MenuCommand
+  3.94%    1.948      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145934 and revision id 1740661. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118150050 and revision id 1740663. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
