Created page with "Výběr rámečku ve 3D pohledu funguje bez použití [[Std_BoxSelection|Std BoxSelection]] nebo [[Std_BoxElementSelection|Std BoxElementSelection]]: # Ujistěte se, že není aktivní žádný nástroj. # Proveďte jednu z následujících akcí: #* Klikněte na prázdnou oblast a přetáhněte obdélník zleva doprava, abyste vybrali prvky, které leží zcela uvnitř obdélníku. #* Klikněte na prázdnou oblast a přetáhněte obdélník zprava doleva, abyste vybrali..."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -313,14 +313,12 @@
 </p><p><span id="3D_View_box_selection"></span>
 </p>
 <h3><span id="V.C3.BDb.C4.9Br_r.C3.A1me.C4.8Dkem_ve_3D_pohledu"></span><span class="mw-headline" id="V&yacute;b&#283;r_r&aacute;me&#269;kem_ve_3D_pohledu">V&yacute;b&#283;r r&aacute;me&#269;kem ve 3D pohledu</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Box selection in the 3D View works without using <a href="../Std_BoxSelection.html" title="Std BoxSelection">Std BoxSelection</a> or <a href="../Std_BoxElementSelection.html" title="Std BoxElementSelection">Std BoxElementSelection</a>:
+<p>V&yacute;b&#283;r r&aacute;me&#269;ku ve 3D pohledu funguje bez pou&#382;it&iacute; <a href="../Std_BoxSelection.html" title="Std BoxSelection">Std BoxSelection</a> nebo <a href="../Std_BoxElementSelection.html" title="Std BoxElementSelection">Std BoxElementSelection</a>:
 </p>
-<ol><li>Make sure that no tool is active.</li>
-<li>Do one of the following:
-<ul><li>Click in an empty area and drag a rectangle from left to right to select elements that lie completely inside the rectangle.</li>
-<li>Click in an empty area and drag a rectangle from right to left to also select elements that touch or cross the rectangle.</li></ul></li></ol>
-</div>
+<ol><li>Ujist&#283;te se, &#382;e nen&iacute; aktivn&iacute; &#382;&aacute;dn&yacute; n&aacute;stroj.</li>
+<li>Prove&#271;te jednu z n&aacute;sleduj&iacute;c&iacute;ch akc&iacute;:
+<ul><li>Klikn&#283;te na pr&aacute;zdnou oblast a p&#345;et&aacute;hn&#283;te obd&eacute;ln&iacute;k zleva doprava, abyste vybrali prvky, kter&eacute; le&#382;&iacute; zcela uvnit&#345; obd&eacute;ln&iacute;ku.</li>
+<li>Klikn&#283;te na pr&aacute;zdnou oblast a p&#345;et&aacute;hn&#283;te obd&eacute;ln&iacute;k zprava doleva, abyste vybrali tak&eacute; prvky, kter&eacute; se dot&yacute;kaj&iacute; nebo prot&iacute;naj&iacute; obd&eacute;ln&iacute;k.</li></ul></li></ol>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>You can box-select edges and points, constraints cannot be box-selected.
 </p>
@@ -499,13 +497,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118150224
+Cached time: 20260118150435
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.433 seconds
-Real time usage: 0.648 seconds
-Preprocessor visited node count: 1407/1000000
+CPU time usage: 0.438 seconds
+Real time usage: 1.158 seconds
+Preprocessor visited node count: 1406/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
 Highest expansion depth: 7/100
@@ -515,19 +513,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.789      1 -total
- 22.27%    9.305      1 Template:Sketcher_Tools_navi/cs
- 14.98%    6.260      1 Template:Userdocnavi/cs
- 13.93%    5.820      2 Template:Navigation_menu_2
-  8.71%    3.638      1 Template:PropertyView
-  7.11%    2.972      2 Template:Docnav
-  6.98%    2.915     34 Template:Version
-  5.89%    2.459      6 Template:Caption
-  5.37%    2.246     14 Template:KEY
-  5.19%    2.168      8 Template:VersionPlus
+100.00%  118.135      1 -total
+ 22.83%   26.974      1 Template:Sketcher_Tools_navi/cs
+ 14.78%   17.463      1 Template:Userdocnavi/cs
+ 11.33%   13.379      1 Template:PropertyView
+  8.68%   10.257     34 Template:Version
+  7.16%    8.459      2 Template:Navigation_menu_2
+  7.03%    8.308      8 Template:VersionPlus
+  6.13%    7.244      5 Template:MenuCommand
+  6.07%    7.175     14 Template:KEY
+  6.06%    7.163      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118150223 and revision id 1740667. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118150434 and revision id 1740669. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
