Created page with "Pomocí rámečku můžete vybrat hrany a body, nelze však vybrat vazby."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -319,10 +319,8 @@
 <li>Prove&#271;te jednu z n&aacute;sleduj&iacute;c&iacute;ch akc&iacute;:
 <ul><li>Klikn&#283;te na pr&aacute;zdnou oblast a p&#345;et&aacute;hn&#283;te obd&eacute;ln&iacute;k zleva doprava, abyste vybrali prvky, kter&eacute; le&#382;&iacute; zcela uvnit&#345; obd&eacute;ln&iacute;ku.</li>
 <li>Klikn&#283;te na pr&aacute;zdnou oblast a p&#345;et&aacute;hn&#283;te obd&eacute;ln&iacute;k zprava doleva, abyste vybrali tak&eacute; prvky, kter&eacute; se dot&yacute;kaj&iacute; nebo prot&iacute;naj&iacute; obd&eacute;ln&iacute;k.</li></ul></li></ol>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>You can box-select edges and points, constraints cannot be box-selected.
+<p>Pomoc&iacute; r&aacute;me&#269;ku m&#367;&#382;ete vybrat hrany a body, nelze v&scaron;ak vybrat vazby.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="3D_View_connected_geometry_selection">3D View connected geometry selection</span></h3>
 </div>
@@ -497,13 +495,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118150435
+Cached time: 20260118150613
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.438 seconds
-Real time usage: 1.158 seconds
-Preprocessor visited node count: 1406/1000000
+CPU time usage: 0.485 seconds
+Real time usage: 0.733 seconds
+Preprocessor visited node count: 1405/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
 Highest expansion depth: 7/100
@@ -513,19 +511,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  118.135      1 -total
- 22.83%   26.974      1 Template:Sketcher_Tools_navi/cs
- 14.78%   17.463      1 Template:Userdocnavi/cs
- 11.33%   13.379      1 Template:PropertyView
-  8.68%   10.257     34 Template:Version
-  7.16%    8.459      2 Template:Navigation_menu_2
-  7.03%    8.308      8 Template:VersionPlus
-  6.13%    7.244      5 Template:MenuCommand
-  6.07%    7.175     14 Template:KEY
-  6.06%    7.163      2 Template:Docnav
+100.00%   36.902      1 -total
+ 22.07%    8.143      1 Template:Sketcher_Tools_navi/cs
+ 14.94%    5.513      1 Template:Userdocnavi/cs
+ 13.74%    5.071      2 Template:Navigation_menu_2
+  8.92%    3.291      1 Template:PropertyView
+  8.01%    2.955     34 Template:Version
+  7.73%    2.851      2 Template:Docnav
+  6.19%    2.285      8 Template:VersionPlus
+  5.09%    1.878      6 Template:Caption
+  4.73%    1.745      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118150434 and revision id 1740669. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118150612 and revision id 1740671. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
