Created page with "== Kopírování, vyjmutí a vložení =="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -334,14 +334,11 @@
 <h3><span id="Kl.C3.A1vesov.C3.A1_zkratka_Vybrat_v.C5.A1e"></span><span class="mw-headline" id="Kl&aacute;vesov&aacute;_zkratka_Vybrat_v&scaron;e">Kl&aacute;vesov&aacute; zkratka Vybrat v&scaron;e</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </p><p>Chcete-li vybrat v&scaron;e ve skice, pou&#382;ijte standardn&iacute; kl&aacute;vesovou zkratku <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">A</span> nebo mo&#382;nost <b>&Uacute;pravy&rarr; Vybrat v&scaron;e</b> z menu.
+</p><p><span id="Copy,_cut_and_paste"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span id="Copy.2C_cut_and_paste"></span><span class="mw-headline" id="Copy,_cut_and_paste">Copy, cut and paste</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<h2><span id="Kop.C3.ADrov.C3.A1n.C3.AD.2C_vyjmut.C3.AD_a_vlo.C5.BEen.C3.AD"></span><span class="mw-headline" id="Kop&iacute;rov&aacute;n&iacute;,_vyjmut&iacute;_a_vlo&#382;en&iacute;">Kop&iacute;rov&aacute;n&iacute;, vyjmut&iacute; a vlo&#382;en&iacute;</span></h2>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The standard keyboard shortcuts, <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">C</span>, <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">X</span> and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">V</span>, can be used to copy, cut and paste selected Sketcher geometry including related constraints. But these tools are also available from the <b>Sketch &rarr; Sketcher Tools</b> menu. They can be used within the same sketch but also between different sketches or separate instances of FreeCAD. Since the data is copied to the clipboard in the form of Python code, it can be used in other ways too (e.g. shared on the forum).
 </p>
@@ -480,13 +477,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118151652
+Cached time: 20260118151756
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.470 seconds
-Real time usage: 0.653 seconds
-Preprocessor visited node count: 1400/1000000
+CPU time usage: 0.359 seconds
+Real time usage: 0.455 seconds
+Preprocessor visited node count: 1399/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9782/2097152 bytes
 Highest expansion depth: 7/100
@@ -496,19 +493,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.913      1 -total
- 20.05%    8.003      1 Template:Sketcher_Tools_navi/cs
- 13.52%    5.395      2 Template:Navigation_menu_2
- 13.34%    5.324      1 Template:Userdocnavi/cs
-  9.45%    3.770      1 Template:PropertyView
-  7.59%    3.029      8 Template:VersionPlus
-  7.44%    2.970      6 Template:Caption
-  7.17%    2.861     34 Template:Version
-  6.87%    2.743      2 Template:Docnav
-  4.66%    1.860      1 Template:Variable
+100.00%   28.425      1 -total
+ 25.37%    7.211      1 Template:Sketcher_Tools_navi/cs
+ 19.05%    5.414      2 Template:Navigation_menu_2
+ 13.59%    3.862      1 Template:Userdocnavi/cs
+ 10.21%    2.901      1 Template:PropertyView
+  7.35%    2.090     34 Template:Version
+  7.10%    2.017      2 Template:Docnav
+  5.15%    1.465      1 Template:Variable
+  4.89%    1.391      6 Template:Caption
+  4.62%    1.314     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151651 and revision id 1740687. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151756 and revision id 1740691. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
